osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_query_contains_more_than_literal_or_name.txt
error: the query must be a `BooleanOperation`, `BinaryComparison`, `UnaryOperation`, or a `Call`
--> main.sml:1:8
     |
   1 | Query = 1
     |         ^ you have provided a `Number`, try something like `ActionName != True`
